[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sm-chapter"
version = "0.1.0"
description = "Minimal, backend-agnostic, conformance-passing chapter server for federated AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "stellarminds.ai" }]
keywords = ["agents", "federation", "did", "conformance", "chapter"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "cryptography>=42",
    "base58>=2.1",
    # The one canonical ARP receipt implementation (build/sign/verify/store).
    # Pinned to a tag — a production runtime must not float on a moving main.
    "sm-arp @ git+https://github.com/Sharathvc23/sm-arp.git@v0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["chapter_core"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

# sm_arp is fully type-hinted but does not yet ship a py.typed marker, so mypy
# can't see its types across the install boundary. Treat it as an untyped
# import rather than failing strict mode. (Follow-up: ship py.typed in sm-arp.)
[[tool.mypy.overrides]]
module = "sm_arp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=chapter_core --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["chapter_core/__init__.py"]
