[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sm-chapter"
version = "0.1.0"
description = "Minimal, backend-agnostic, conformance-passing chapter server for federated AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "stellarminds.ai" }]
keywords = ["agents", "federation", "did", "conformance", "chapter"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "cryptography>=42",
    "base58>=2.1",
    # Required by the vendored sm_arp/ (the canonical ARP receipt impl). sm_arp
    # itself is vendored in-tree rather than fetched as a git dependency — see
    # VENDORED.md for provenance + the re-sync procedure.
    "jcs>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
# sm_arp is vendored in-tree (VENDORED.md), so ship it in the wheel — the
# package then has no external, private-git dependency to fetch at install time.
packages = ["chapter_core", "sm_arp"]

[tool.ruff]
line-length = 110
target-version = "py311"
# Vendored upstream code — not held to this repo's lint rules.
extend-exclude = ["sm_arp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
# sm_arp is vendored in-tree (VENDORED.md) but is upstream's library, not our
# code — keep it sorted as a third-party import, not first-party.
known-third-party = ["sm_arp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

# sm_arp is vendored in-tree (VENDORED.md). It is its upstream's code, so we
# don't hold it to this repo's strict mode: skip following into it and treat its
# symbols as untyped at the chapter_core boundary.
[[tool.mypy.overrides]]
module = "sm_arp.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
addopts = "-q --cov=chapter_core --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["chapter_core/__init__.py"]
