[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sm-server"
version = "0.1.0"
description = "Minimal, backend-agnostic, conformance-passing chapter server for federated AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "stellarminds.ai" }]
keywords = ["agents", "federation", "did", "conformance", "chapter", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "cryptography>=42",
    "base58>=2.1",
    "jcs>=0.2",
    # The canonical ARP receipt implementation. Now a published dependency — it
    # was vendored in-tree while sm-arp was private; sm-arp is public on PyPI.
    "sm-arp>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/Sharathvc23/sm-server"
Repository = "https://github.com/Sharathvc23/sm-server"
Changelog = "https://github.com/Sharathvc23/sm-server/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["sm_server"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
# sm_arp is the third-party sm-arp package, not our code.
known-third-party = ["sm_arp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

# sm-arp ships no py.typed yet, so treat its symbols as untyped at the
# sm_server boundary rather than failing strict mode.
[[tool.mypy.overrides]]
module = "sm_arp.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
addopts = "-q --cov=sm_server --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["sm_server/__init__.py"]
